Added example for .chr

--- a/Type/Int.pod
+++ b/Type/Int.pod
@@ -36,6 +36,11 @@ Usage:
 Returns a one-character string, by interpreting the integer as a Unicode
 codepoint number and converting it the corresponding character.
 
+Example:
+
+    65.chr  # returns "A"
+    196.chr # returns "Ä"
+
 =head2 routine expmod
 
 Defined as:
