Point to flatmap correctly in Type and Routine views

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -217,7 +217,7 @@ Note that C<map> does not flatten embedded lists and arrays, so
 
 passes C<(1, 2)> and C<< <a b> >> in turn to the block, leading to a total
 of two iterations and the result sequence C<"1,2", "a,b">.
-See L<method flatmap|#method flatmap> for an alternative that flattens.
+See L<method flatmap|/type/List/#method_flatmap> for an alternative that flattens.
 
 =head2 method flatmap
 
