modules: mention log file from modules.perl6.org

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -288,6 +288,11 @@ To share your module, do the following:
     add your module to the L<ecosystem|https://github.com/perl6/ecosystem>, or
     else ask them if they could please add it for you.
 
+    =item After the pull request has been accepted, wait for an hour. If
+    your module doesn't show up on L<http://modules.perl6.org/>, please
+    view the log file at L<http://modules.perl6.org/log/update.log> to see
+    if it identifies an error with your module or meta file.
+
 B<That's it! Thanks for contributing to the Perl 6 community!>
 
 If you'd like to try out installing your module, use the panda module
