Fix broken links in IO documentation.

--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -117,7 +117,7 @@ Return the number of lines read from the file.
 
 Return the remaining content of the file from the current file position
 (which may have been set by previous reads or by C<seek>.)  If the
-adverb C<:bin> is provided a L<Buf|/lib/Type/Buf> will be returned,
+adverb C<:bin> is provided a L<Buf> will be returned,
 otherwise the return will be a C<Str> with the optional encoding C<:enc>.
 
 =head2 method close
