--- a/Type/IO/Spec.pod
+++ b/Type/IO/Spec.pod
@@ -11,8 +11,8 @@ the platform perl is running on via the C<$*SPEC> variable which will contain
 an object of the appropriate type.
 
 The sub-classes are documeted separately with the platform specific differemces
-are documented in L<IO::Spec::Cygwin|/lib/Type/IO/Spec/Cygwin>, L<IO::Spec::QNX|/lib/Type/IO/Spec/QNX>, L<IO::Spec::Unix|/lib/Type/IO/Spec/Unix> and 
-L<IO::Spec::Win32|/lib/Type/IO/Spec/Win32>.
+are documented in L<IO::Spec::Cygwin>, L<IO::Spec::QNX>, L<IO::Spec::Unix> and
+L<IO::Spec::Win32>.
 
 =head2 method canonpath
 
