--- a/Type/IO/Spec/Cygwin.pod
+++ b/Type/IO/Spec/Cygwin.pod
@@ -6,7 +6,7 @@
 
     class IO::Spec::QNX is IO::Spec { }
 
-This sub-class of L<IO::Spec|/lib/Type/IO/Spec> will be available from the
+This sub-class of L<IO::Spec> will be available from the
 C<$*SPEC> variable for a perl running on C<Cygwin> .
 
 =head2 method canonpath
