--- a/Type/IO/Spec/QNX.pod
+++ b/Type/IO/Spec/QNX.pod
@@ -6,7 +6,7 @@
 
     class IO::Spec::QNX is IO::Spec { }
 
-This sub-class of L<IO::Spec|/lib/Type/IO/Spec> specific to QNX will be
+This sub-class of L<IO::Spec> specific to QNX will be
 available via C<$*SPEC> if the perl is running on QNX.
 
 =head2 method canonpath
