--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -196,7 +196,7 @@ not absolute.  The optional named parameter C<test> can specify a file test
 that should be applied to the target path if the operation is successful.
 The default C<test> is that the directory is readable.
 
-If the directory change is successful then the L<IO::Path|/lib/Type/IO/Path>
+If the directory change is successful then the L<IO::Path>
 representing the target directory is returned, otherwise it will
 L<fail|/routine/fail> with L<X::IO::Chdir>.
 
@@ -211,7 +211,7 @@ http://en.wikipedia.org/wiki/File_system_permissions#Numeric_notation>
 specified as an integer (thought still subject to L<umask|
 http://en.wikipedia.org/wiki/Umask>).
 
-Throws an exception of type L<X::IO::Mkdir|/type/X::IO::Mkdir> if the
+Throws an exception of type L<X::IO::Mkdir> if the
 directory cannot be created, except for the C<*@dirnames> form which
 returns the names of the directories that were successfully created.
 
@@ -223,7 +223,7 @@ returns the names of the directories that were successfully created.
 Remove the given directory if it is empty.
 
 Returns C<True> on success.  Throws an exception of type
-L<X::IO::Rmdir|/type/X::IO::Rmdir> if the directory cannot be removed (e.g.
+L<X::IO::Rmdir> if the directory cannot be removed (e.g.
 the directory is not empty, or the path is not a directory).
 
 =head2 routine chmod
