--- a/Type/IO/Socket/Async.pod
+++ b/Type/IO/Socket/Async.pod
@@ -10,7 +10,7 @@ C<IO::Socket::Async> provides asynchronous TCP sockets, for both the
 server and the client side.
 
 Here is the equivalent example to that in
-L<IO::Socket::INET|/lib/Type/IO/Socket/INET> of a simple echo server
+L<IO::Socket::INET> of a simple echo server
 that listens on port 3333:
 
 =begin code
@@ -57,17 +57,17 @@ or C<listen> should be used to create a client or a server respectively.
     method connect(Str $host, Int $port) returns Promise
 
 Attempts to connect to the TCP server specified by C<$host> and C<$port>,
-returning a L<Promise|/lib/Type/Promise> that will either be kept with a connected L<IO::Socket::Async> or broken if the connection cannot be made.
+returning a L<Promise> that will either be kept with a connected L<IO::Socket::Async> or broken if the connection cannot be made.
 
 =head2 method listen
 
     method listen(Str $host, Int $port) returns Supply
 
 Creates a listening socket on the specified C<$host> and C<$port>, returning
-a L<Supply|/lib/Type/Supply> to which the accepted client L<IO::Socket::Async>s will be C<emit>ted. This L<Supply|/lib/Type/Supply> should be tapped to
+a L<Supply> to which the accepted client L<IO::Socket::Async>s will be C<emit>ted. This L<Supply> should be tapped to
 process the client connections.
 
-To close the underlying listening socket the  L<Supply|/lib/Type/Supply>
+To close the underlying listening socket the  L<Supply>
 should be C<close>d.
 
 =head2 method print
@@ -76,7 +76,7 @@ should be C<close>d.
 
 Attempt to send C<$str> on the L<IO::Socket::Async> that will
 have been obtained indirectly via C<connect> or C<listen>, returning a
-L<Promise|/lib/Type/Promise> that will be kept with the number of bytes
+L<Promise> that will be kept with the number of bytes
 sent or broken if there was an error sending.
 
 =head2 method write
@@ -85,22 +85,22 @@ sent or broken if there was an error sending.
 
 Attempt to send the bytes in C<$b> on the L<IO::Socket::Async> that will
 have been obtained indirectly via C<connect> or C<listen>, returning a
-L<Promise|/lib/Type/Promise> that will be kept with the number of bytes
+L<Promise> that will be kept with the number of bytes
 sent or broken if there was an error sending.
 
 =head2 method chars-supply
 
 	method chars-supply() returns Supply
 
-Returns a L<Supply|/lib/Type/Supply> which can be tapped to obtain the
+Returns a L<Supply> which can be tapped to obtain the
 characters read from the connected L<IO::Socket::Async> as they arrive.
 
 =head2 method bytes-supply
 
 	method bytes-supply() returns Supply
 
-Returns a L<Supply|/lib/Type/Supply> which can be tapped to obtain
-the bytes (as elements of a L<Buf|/lib/Type/Buf>,) read from the
+Returns a L<Supply> which can be tapped to obtain
+the bytes (as elements of a L<Buf>,) read from the
 L<IO::Socket::Async>  as they arrive.
 
 =head2 method close
@@ -108,10 +108,10 @@ L<IO::Socket::Async>  as they arrive.
 	method close()
 
 Close the connected client <IO::Socket::Async> which will have been
-obtained from the C<listen> L<Supply|/lib/Type/Supply> or the C<connect>
-L<Promise|/lib/Type/Promise>.
+obtained from the C<listen> L<Supply> or the C<connect>
+L<Promise>.
 
 In order to close the underlying listening socket created by C<listen> you
-can simply C<close> the  L<Supply|/lib/Type/Supply>.
+can simply C<close> the  L<Supply>.
 
 =end pod
