Fix grammar in IO::Spec documentation.

--- a/Type/IO/Spec.pod
+++ b/Type/IO/Spec.pod
@@ -10,9 +10,9 @@ Objects of this class are not used directly but as a sub-class specific to
 the platform perl is running on via the C<$*SPEC> variable which will contain
 an object of the appropriate type.
 
-The sub-classes are documeted separately with the platform specific differemces
-are documented in L<IO::Spec::Cygwin>, L<IO::Spec::QNX>, L<IO::Spec::Unix> and
-L<IO::Spec::Win32>.
+The sub-classes are documented separately, with the platform-specific
+differences documented in L<IO::Spec::Cygwin>, L<IO::Spec::QNX>,
+L<IO::Spec::Unix> and L<IO::Spec::Win32>.
 
 =head2 method canonpath
 
