Add caveats for common problems with typed positional params

--- a/Language/traps.pod
+++ b/Language/traps.pod
@@ -172,6 +172,35 @@ last element of an array becomes:
     my @array = qw{victor alice bob charlie eve};
     say @array[*-1];   #->  eve
 
+=head2 Typed Array parameters
+
+Quite often new users will happen to write something like:
+
+    sub foo (Array @a) { ... }
+
+...before they have gotten far enough in the documentation to realize that
+this is asking for an Array of Arrays.  To say that C<@a> should only accept
+Arrays, use instead:
+
+    sub foo(@a where Array) { ... }
+
+It is also common to expect this to work, when it does not:
+
+    sub bar(Int @a) { 42.say };
+    bar([1,2,3]);               #-> expected Positional[Int] but got Array
+
+The problem here is that [1,2,3] is not an C<Array[Int]>, it is a plain
+old Array that just happens to have Ints in it.  To get it to work,
+the argument must also be an C<Array[Int]>.
+
+    my Int @b = 1,2,3;
+    bar(@b);                    #-> 42
+    bar(Array[Int].new(1,2,3));
+
+This may seem inconvenient, but on the upside it moves the type-check
+on what is assigned to C<@b> to where the assignment happens, rather
+than requiring every element to be checked on every call.
+
 =head1 Strings
 
 =head2 Capitalizing a string
