--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -830,7 +830,7 @@ Grammars provide an easy way to override what C«<.ws>» matches:
         }
     }
 
-    # doesn't parse, whitspace required between a and b
+    # doesn't parse, whitespace required between a and b
     say so Demo.parse("ab.");       # False
     say so Demo.parse("a b.");      # True
     say so Demo.parse("a\tb .");    # True
