--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -830,7 +830,7 @@ Grammars provide an easy way to override what C«<.ws>» matches:
         }
     }
 
-    # doesn't parse, whitspace required between a and b
+    # doesn't parse, whitespace required between a and b
     say so Demo.parse("ab.");       # False
     say so Demo.parse("a b.");      # True
     say so Demo.parse("a\tb .");    # True
@@ -1032,7 +1032,7 @@ When you use a list of alternations inside a parenthesis or brackets, align
 the vertical bars:
 
     my regex example {
-        <preabmle>
+        <preamble>
         [
         || <choice_1>
         || <choice_2>
