Document Code.{line,file}

--- a/Type/Code.pod
+++ b/Type/Code.pod
@@ -94,4 +94,31 @@ Returns the name of the code object.
     sub marine() { }
     say ~&marine;   # marine
 
+
+=head2 method file
+
+Defined as:
+
+    method file(Code:D:) returns Str:D
+
+Usage:
+
+    CODE.Str
+
+Returns the name of the file in which the code object was declared.
+
+    say &infix:<+>.file;
+
+=head2 method line
+
+Defined as
+
+    method line(Code:D:) returns Int:D
+
+Usage:
+
+    CODE.Int
+
+Returns the line number in which the code object was declared.
+
 =end pod
