List.pod: Fix .push examples to use .append instead

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -30,20 +30,18 @@ inside a scalar as a single element, as long as it's part of another .
 
 Lists generally don't interpolate (flatten) into other lists, except
 when they are not itemized, and the single argument to an operation
-such as C<push>:
+such as C<append>:
 
     my @a = 1, 2, 3;
     my @nested = @a, @a;           # two elements
     my @flat = flat @a, @a;        # six elements, with explict flat
     my @b = 'a', 'b';
-    @b.push: @a;                   # @b now has 5 elements, because @a
-                                   # is the sole argument to push
+    @b.append: @a;                 # @b now has 5 elements, because @a
+                                   # is the sole argument to append
     my @c = 'a', 'b';
-    @c.push: @a, ;                 # @b now has 3 elements, because of the
-                                   # trailing comma
-    my @c = 'a', 'b';
-    @c.push: $@a;                  # @b now has 3 arguments, because @a was
-                                   # itemized
+    @c.append: $@a;                # @b now has 3 elements, because of the
+                                   # itemization with $
+    say @c.elems;
 
 C<.item> can often be written as C<$( ... )>, and on an array variable
 even as C<$@a>.
@@ -56,7 +54,7 @@ L<Iterable|/type/Iterable> role, notable L<hashes|/type/Hash>:
     my @c = %h, ; say @c.elems;     # 1
     my @d = $%h;  say @d.elems;     # 1
 
-Slurpy parameters (C<*@a>) flattens non-itemized sublists:
+Slurpy parameters (C<*@a>) flatten non-itemized sublists:
 
     sub fe(*@flat) { @flat.elems }
     say fe(<a b>, <d e>);           # 4
