--- a/Type/Array.pod
+++ b/Type/Array.pod
@@ -55,8 +55,49 @@ Fails for infinite arrays.
 Example:
 
     my @foo = <a b c>;
-    @foo.push: 1, 3 ... 11;
-    say @foo;                   # a b c 1 3 5 7 9 11
+    @foo.push: 'd';
+    say @foo;                   # a b c d
+
+Note that C<push> does not attempt to flatten its argument list. If you pass
+an array or list as the thing to push, it becomes one additional element:
+
+    my @a = <a b c>;
+    my @b = <d e f>;
+    @a.push: @b;
+    say @a.elems;               # 4
+    say @a[3].join;             # def
+
+Only if you supply multiple values as separate arguments to C<push> are
+multiple values added to the array:
+
+   my @a = '1';
+   my @b = <a b>
+   my @c = <E F>;
+   @a.push: @b, @c;
+   say @a.elems;                # 3
+
+See L<method append|#method append> for when you want to append multiple
+values that are stored in a single array.
+
+=head2 method append
+
+Defined as
+
+    sub append(\array, elems)
+    multi method append(Array:D: \values)
+    multi method append(Array:D: **@values is raw)
+
+Usage:
+
+    ARRAY.append(LIST)
+    append ARRAY, LIST
+
+Appends the argument list to the array passed as first argument. This modifies
+the array in-place. Returns the modified array.
+
+The difference to method C<push> is that with an array or list argument,
+C<append> appends several elements (one for each array or list element),
+whereas C<push> appends just one element.
 
 =head2 routine shift
 
@@ -100,5 +141,27 @@ Example:
     my @foo = <a b c>;
     @foo.unshift: 1, 3 ... 11;
     say @foo;                   # 1 3 5 7 9 11 a b c
+
+The notes in L<the documentation for method push|#method push> apply,
+regarding how many elements are added to the array.
+
+L<#method prepend> is the equivalent for adding multiple elements from one
+list or array.
+
+=head2 method prepend
+
+Defined as
+
+    sub prepend(\array, elems)
+    multi method prepend(Array:D: \values)
+    multi method prepend(Array:D: **@values is raw)
+
+Usage:
+
+    ARRAY.prepend(LIST)
+    prepend ARRAY, LIST
+
+Adds the elements from C<LIST> to the front of the array, modifying it
+in-place.
 
 =end pod
