Fix typo in Routine documentation.

--- a/Type/Routine.pod
+++ b/Type/Routine.pod
@@ -119,7 +119,7 @@ functions when the arguments are known at compile time.
 
     multi sub trait_mod:<is>(Routine $r, :!$rw)
 
-When a routine is modifies with this trait, its return value will be writable.
+When a routine is modified with this trait, its return value will be writable.
 This is useful when returning variables or writable elements of hashes or
 arrays, for example:
 
