Fix typos in syntax documentation.

--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -330,8 +330,8 @@ Long forms with explicit values:
 
 =head3 Array literals
 
-A pair of square brackets can surround an expression to for an
-itmized L<Array|/type/Array> literal; typically there is a comma-delimited list
+A pair of square brackets can surround an expression to form an itemized
+L<Array|/type/Array> literal; typically there is a comma-delimited list
 inside:
 
     say ['a', 'b', 42].join(' ');   # a b 42
