--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -607,11 +607,20 @@ L<succ>). It fails on underflow
 
 Returns the codepoint number of the first character of the string
 
+Example:
+
+    ord("A") # 65
+    "«".ord  # 171
+
 =head2 method ords
 
     multi method ords(Str:D:) returns Positional
 
 Returns a list of codepoint numbers, one for each character in the string.
+
+Example:
+
+    "aå«".ords # (97 229 171)
 
 =head2 method indent
 
