Revised description of Str.indent

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -629,9 +629,9 @@ Example:
     multi method indent(Int $steps where { $_ > 0  } )
     multi method indent($steps where { .isa(Whatever) || .isa(Int) && $_ < 0 )
 
-Indents each line of the string by C<$steps>, if C<$steps> is positive,
-or dedents it by C<-$steps> if C<$steps> is negative. if C<$steps> is
-L<C<*>|*>, then the string is dedented to the margin:
+Indents each line of the string by C<$steps>. If C<$steps> is negative,
+it outdents instead. If C<$steps> is L<C<*>|*>, then the string is
+outdented to the margin:
 
     =begin code
     "  indented by 2 spaces\n    indented even more".indent(*)
