$*PROGRAM_NAME was renamed to $*PROGRAM-NAME.

--- a/Language/5to6-perlvar.pod
+++ b/Language/5to6-perlvar.pod
@@ -72,7 +72,7 @@ C<$$> is replaced in Perl 6 by C<$*PID>
 =item $PROGRAM_NAME
 =item $0
 
-You can access the program name in Perl 6 via C<$*PROGRAM_NAME>.
+You can access the program name in Perl 6 via C<$*PROGRAM-NAME>.
 
 Note: $0 in Perl 6 is the variable holding the first captured value from a
 match (i. e. capture variables now start from $0 rather than $1).
