Changed C<$*EXECUTABLE_NAME> to C<$*EXECUTABLE-NAME> in 5to6-perlvar.pod

--- a/Language/5to6-perlvar.pod
+++ b/Language/5to6-perlvar.pod
@@ -251,7 +251,7 @@ There does not seem to be any analog to this in Perl 6.
 
 =item $^X
 
-This has been replaced by C<$*EXECUTABLE_NAME>. Confusingly, the Perl 6
+This has been replaced by C<$*EXECUTABLE-NAME>. Confusingly, the Perl 6
 Variables doc says "Favor $*EXECUTABLE because it is not guaranteed that
 the perl executable is in PATH." Confusingly because C<$*EXECUTABLE> is
 an C<IO> object, which does not seem to be what you would want here.
