Mention different flattening behaviour

--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -997,9 +997,11 @@ $format, *@args)".
 =item push ARRAY,LIST
 
 Works as in Perl 5, as well as being available as a method:
-C<@a.push("foo");>
+C<@a.push("foo");>. I<Note:> the flattening behaviour is different in Perl 6:
+C<@b.push: @a> will place C<@a> as the first element of C<@b>. See also the
+L<append method|/type/Array#method_append>.
 
-=head2 quoting 
+=head2 quoting
 
 =item q/STRING/
 
