Added examples for grep-index, first-index, and last-index

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -273,6 +273,13 @@ Usage:
 Returns a sequence of indices against which the associated elements
 smart-match.  The indices are returned in order.
 
+Examples:
+
+    > ('hello', 1, 22/7, 42, 'world').grep-index: Int
+    (1 3)
+    > grep-index { .Str.chars > 3 }, 'hello', 1, 22/7, 42, 'world'
+    (0 2 4)
+
 =head2 routine first
 
 Defined as:
@@ -307,6 +314,10 @@ Usage:
 Returns the first index against which C<$matcher> smart-matches, or C<Nil> if
 no match was found.
 
+Example:
+
+    say (1, 22/7, 42, 300, 72).first-index: * > 5;   # 2
+
 =head2 routine last-index
 
 Defined as:
@@ -319,6 +330,10 @@ Usage:
 
 Returns the last index against which C<$matcher> smart-matches, or C<Nil> if
 no match was found.
+
+Example:
+
+    say (1, 22/7, 42, 300, 72).last-index: * > 5;   # 4
 
 =head2 routine classify
 
