Document Supply.throttle

--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -343,6 +343,16 @@ Creates a "rotoring" supply with the same semantics as List.rotor.
 Creates a new supply in which all values flowing through the given supply
 are emitted, but with the given delay in seconds.
 
+=head2 throttle
+
+    method throttle(Supply:D: $elems, $seconds, $delay = 0, :$scheduler) returns Supply:D
+
+Produces a C<Supply> that throttles emitting the values of the given Supply
+on the created C<Supply> by the number of elements (specified by the first
+parameter) per number of seconds (specified by the second parameter).
+Optionally allows for specification of delay (in number of seconds), and
+scheduler to be used (defaults to $*SCHEDULER).
+
 =head2 method stable
 
     method stable(Supply:D: $seconds, :$scheduler) returns Supply:D
