--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -163,7 +163,7 @@ dynamically. For example:
 =head3 EXPORT
 
 You can export arbitrary symbols with an C<EXPORT> sub. C<EXPORT>
-must return a L<EnumMap>, where the keys are the symbol names and
+must return a L<Map>, where the keys are the symbol names and
 the values are the desired values. The names should include the sigil
 (if any) for the associated type.
 
