--- a/Type/Cool.pod
+++ b/Type/Cool.pod
@@ -19,7 +19,7 @@ C<Int> converts the integer to C<Str> first.
 
 The following built-in types inherit from C<Cool>:
 L<Array> L<Backtrace> L<Bag> L<Baggy> L<Bool> L<Complex> L<Cool>
-L<Duration> L<Enumeration> L<EnumMap> L<FatRat> L<Hash> L<Instant>
+L<Duration> L<Enumeration> L<Map> L<FatRat> L<Hash> L<Instant>
 L<Int> L<KeyHash> L<KeySet> L<List> L<Match>
 L<Nil> L<Num> L<Numeric>
 L<Range> L<Real> L<Seq> L<Set> L<Stash> L<Str> L<Stringy>
