--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Mapping from strings to itemized values
 
-    class Hash is EnumMap { }
+    class Hash is Map { }
 
 A Hash is a mutable mapping from keys to values (called I<dictionary>,
 I<hash table> or I<map> in other programming languages). The values are
