--- a/Type/Associative.pod
+++ b/Type/Associative.pod
@@ -7,7 +7,7 @@
     role Associative { }
 
 A common role for types that support name-based lookup through
-C<< postcircumfix:<{ }> >>, for example L<Hash> and L<EnumMap>.
+C<< postcircumfix:<{ }> >>, for example L<Hash> and L<Map>.
 
 The C<%> sigil restricts variables to objects that do C<Associative>.
 
