--- a/Type/Map.pod
+++ b/Type/Map.pod
@@ -1,21 +1,21 @@
 =begin pod
 
-=TITLE class EnumMap
+=TITLE class Map
 
 =SUBTITLE Immutable mapping from strings to values
 
-    class EnumMap does Associative is Iterable { }
+    class Map does Associative is Iterable { }
 
-An EnumMap is an immutable mapping from string keys to values of arbitrary
+An Map is an immutable mapping from string keys to values of arbitrary
 types. It serves as a base class for L<Hash>, which is mutable.
 
-In list context an EnumMap behaves as a list of L<Pair> objects.
+In list context an Map behaves as a list of L<Pair> objects.
 
 Note that the order in which keys, values and pairs are retrieved is
 generally arbitrary, but the C<keys>, C<values> and C<pairs> methods
 return them always in the same order when called on the same object.
 
-    my %e := EnumMap.new('a', 1, 'b', 2);
+    my %e := Map.new('a', 1, 'b', 2);
     say %e.keys;    # can print "a b\n" or "b a\n";
     say %e.values;  # prints "1 2\n" if the previous line
                     # printed "a b\n", "b a\n" otherwise
@@ -31,9 +31,9 @@ Defined as:
 
 Usage:
 
-    EnumMap.new(ARGS)
+    Map.new(ARGS)
 
-Creates a new EnumMap from a list of alternating keys and values, with
+Creates a new Map from a list of alternating keys and values, with
 the same semantics as described for hash assigning in the L<Hash>
 documentation.
 
@@ -41,31 +41,31 @@ documentation.
 
 Defined as:
 
-    method elems(EnumMap:D:) returns Int:D:
+    method elems(Map:D:) returns Int:D:
 
 Usage:
 
-    ENUMMAP.elems
+    MAP.elems
 
-Returns the number of pairs stored in the EnumMap.
+Returns the number of pairs stored in the Map.
 
 =head2 method ACCEPTS
 
 Defined as:
 
-    multi method ACCEPTS(EnumMap:D: Positional $topic)
-    multi method ACCEPTS(EnumMap:D: Cool:D     $topic)
-    multi method ACCEPTS(EnumMap:D: Regex      $topic)
-    multi method ACCEPTS(EnumMap:D: Any        $topic)
+    multi method ACCEPTS(Map:D: Positional $topic)
+    multi method ACCEPTS(Map:D: Cool:D     $topic)
+    multi method ACCEPTS(Map:D: Regex      $topic)
+    multi method ACCEPTS(Map:D: Any        $topic)
 
 Usage:
 
-    ENUMMAP.ACCEPTS(TOPIC)
+    MAP.ACCEPTS(TOPIC)
 
-Used in smart-matching if the right-hand side is an C<EnumMap>.
+Used in smart-matching if the right-hand side is an C<Map>.
 
 If the topic is list-like (L<Positional>), returns True if
-any of the list elements exist as a key in the EnumMap.
+any of the list elements exist as a key in the Map.
 
 If the topic is of type C<Cool> (strings, integers etc.),
 returns True if the topic exists as a key.
@@ -76,12 +76,12 @@ the regex.
 As a fallback, the topic is coerced to a list, and the C<Positional>
 behavior is applied.
 
-To retrieve a value from the EnumMap by key, use the C<{ }> postcircumfix
+To retrieve a value from the Map by key, use the C<{ }> postcircumfix
 operator:
 
-    my $value = $enummap{$key};
+    my $value = $map{$key};
 
-To check whether a given key is stored in an EnumMap, modify the access
+To check whether a given key is stored in an Map, modify the access
 with the C<:exists> adverb:
 
     if %h{$key}:exists {
@@ -92,47 +92,47 @@ with the C<:exists> adverb:
 
 Defined as:
 
-    method keys(EnumMap:D:) returns List:D
+    method keys(Map:D:) returns List:D
 
 Usage:
 
-    ENUMMAP.keys
+    MAP.keys
 
-Returns a list of all keys in the EnumMap.
+Returns a list of all keys in the Map.
 
 =head2 method values
 
 Defined as:
 
-    method values(EnumMap:D:) returns List:D
+    method values(Map:D:) returns List:D
 
 Usage:
 
-    ENUMMAP.values
+    MAP.values
 
-Returns a list of all values in the EnumMap.
+Returns a list of all values in the Map.
 
 =head2 method pairs
 
 Defined as:
 
-    method pairs(EnumMap:D:) returns List:D
+    method pairs(Map:D:) returns List:D
 
 Usage:
 
-    ENUMMAP.pairs
+    MAP.pairs
 
-Returns a list of all pairs in the EnumMap.
+Returns a list of all pairs in the Map.
 
 =head2 method invert
 
 Defined as:
 
-    method invert(EnumMap:D:) returns List:D
+    method invert(Map:D:) returns List:D
 
 Usage:
 
-    ENUMMAP.invert
+    MAP.invert
 
 Returns a list of pairs, but with key and value exchanged.
 
@@ -140,14 +140,14 @@ Returns a list of pairs, but with key and value exchanged.
 
 Defined as:
 
-    method kv(EnumMap:D:) returns List:D
+    method kv(Map:D:) returns List:D
 
 Usage:
 
-    ENUMMAP.kv
+    MAP.kv
 
 Returns a list of keys and values interleaved.
 
-    EnumMap.new('a', 1, 'b', 2).kv  # a, 1, b, 2 OR b, 2, a, 1
+    Map.new('a', 1, 'b', 2).kv  # a, 1, b, 2 OR b, 2, a, 1
 
 =end pod
