--- a/Type/Pod/Block.pod
+++ b/Type/Pod/Block.pod
@@ -35,7 +35,7 @@ Returns a list of contents of this block.
 
 =head2 method config
 
-    method config returns EnumMap:D
+    method config returns Map:D
 
 Returns a hash of configs.
 
