document Attribute traits 'rw' and 'required'

--- a/Type/Attribute.pod
+++ b/Type/Attribute.pod
@@ -124,4 +124,41 @@ Binds the value C<new_val> to this attribute of object C<$instance>.
 Note that this method violates encapsulation of the object, and should be
 used with care. Here be dragons.
 
+=head2 trait is required
+
+    multi sub trait_mod:<is> (Attribute $attr, :$required!)
+
+Marks an attribute as being required. If a value is not provided
+during object construction, an exception is thrown.
+
+    class Foo {
+       has $.bar is required;
+       has $.baz;
+    }
+
+    Foo.new(bar => 42) # works
+    Foo.new(baz => 42) # fails - bar is required
+
+C<is required> doesn't just affect the default constructor, it checks
+for the attribute at a lower level, so it will work for custom
+constructors written using L<bless>.
+
+
+=head2 trait is rw
+
+    multi sub trait_mod:<is> (Attribute:D $attr, :$rw!)
+
+Marks an attribute as read/write as opposed to the default
+C<readonly>. The default accessor for the attribute will return a
+writable value.
+
+   class Foo {
+      has $.bar is rw;
+      has $.baz;
+   }
+
+   my $foo = Foo.new;
+   $foo.bar = 42; # works
+   $foo.baz = 42; # fails
+
 =end pod
