--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -162,7 +162,7 @@ call).
     }
 
 This defaults to providing a read-only accessor. In order to allow changes
-to the attribute, add the C<rw> trait:
+to the attribute, add the L<is rw> trait:
 
     class Journey {
         has $.origin;
@@ -174,6 +174,17 @@ to the attribute, add the C<rw> trait:
 Now, after a C<Journey> object is created, its C<.origin>, C<.destination>,
 and C<.notes> will all be accessible from outside the class, but only
 C<.notes> can be modified.
+
+The above allows creation of C<Journey> objects without an origin or
+destination. To change this you can provide a default value or make
+sure that it is provided by marking it with L<is required>.
+
+    class Journey {
+        has $.origin is required; # error if origin is not provided
+        has $.destination = 'Orlando'; # if not provided set to Orlando
+        has @!travellers;
+        has $.notes is rw;
+    }
 
 Since classes inherit a default constructor from C<Mu> and we have requested
 that some accessor methods are generated for us, our class is already
