Fix typo, llfourn++

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -346,7 +346,7 @@ produces this output:
 
 
 C<gather/take> is scoped dynamically, so you can call C<take> from subs or methods that are called
-from withint C<gather>:
+from within C<gather>:
 
     sub weird(@elems, :$direction = 'foward') {
         my %direction = (
