typo in routine signature

--- a/Type/Routine.pod
+++ b/Type/Routine.pod
@@ -117,7 +117,7 @@ functions when the arguments are known at compile time.
 
 =head2 trait is rw
 
-    multi sub trait_mod:<is>(Routine $r, :!$rw)
+    multi sub trait_mod:<is>(Routine $r, :$rw!)
 
 When a routine is modified with this trait, its return value will be writable.
 This is useful when returning variables or writable elements of hashes or
