Explain type smilies

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -21,6 +21,31 @@ In this example, the result of the comparison (which is a
 L<Junction|/type/Junction>), is
 converted to Bool before being printed.
 
+=head2 What are those C<:D> and C<:U> things in signatures?
+
+In Perl 6, classes and other types are objects, and pass type checks
+of their own type.
+
+For example if you declare a variable
+
+    my Int $x = 42;
+
+then not only can you assign integers (that is, instances of class Int) to it,
+but the C<Int> type object itself:
+
+    $x = Int
+
+If you want to exclude type objects, you can append the C<:D> type smiley,
+which stands for "definite":
+
+    my Int:D $x = 42;
+    $x = Int;   # dies with:
+                # Type check failed in assignment to $x; 
+                # expected Int:D but got Int
+
+Likewise C<:U> constrains to undefined values, that is, type objects.
+
+To explicitly allow either type objects or instances, you can use C<:_>.
 
 =head2 How can I extract the values from a Junction?
 
