Fix a markdown-ism in FAQs

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -281,7 +281,7 @@ Unlike most languages, it offers
 
 =item  cleaned up regular expressions
 
-=item  [PEG](http://en.wikipedia.org/wiki/Parsing_expression_grammar) like grammars for parsing
+=item  L<PEG|http://en.wikipedia.org/wiki/Parsing_expression_grammar> like grammars for parsing
 
 =item  lazy lists
 
