Fix a usage example

--- a/Type/Attribute.pod
+++ b/Type/Attribute.pod
@@ -102,7 +102,7 @@ Defined as:
 
 Usage:
 
-    ATTRIBUTE.get_value
+    my $val = ATTRIBUTE.get_value(OBJECT)
 
 Returns the value stored in this attribute of object C<$instance>.
 
