fix another Usage example

--- a/Type/Attribute.pod
+++ b/Type/Attribute.pod
@@ -117,7 +117,7 @@ Defined as:
 
 Usage:
 
-    ATTRIBUTE.set_value
+    ATTRIBUTE.set_value(OBJECT, NEW_VALUE)
 
 Binds the value C<new_val> to this attribute of object C<$instance>.
 
