mixed in a self into the attribute default example

--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -180,8 +180,10 @@ destination. To change this you can provide a default value or make
 sure that it is provided by marking it with L<is required>.
 
     class Journey {
-        has $.origin is required; # error if origin is not provided
-        has $.destination = 'Orlando'; # if not provided set to Orlando
+        # error if origin is not provided
+        has $.origin is required;
+        # set the destination to Orlando as default (unless that is the origin!)
+        has $.destination = self.origin eq 'Orlando' ?? 'Kampala' !! 'Orlando';
         has @!travellers;
         has $.notes is rw;
     }
