Fix typo. Closes #168

--- a/Type/DateTime.pod
+++ b/Type/DateTime.pod
@@ -78,7 +78,7 @@ L<X::DateTime:TimezoneClash> is thrown.
 
 Defined as:
 
-    method now(:$timezone=*$TZ, &formatter) returns DateTime:D
+    method now(:$timezone=$*TZ, &formatter) returns DateTime:D
 
 Usage:
 
