--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -209,7 +209,7 @@ C<token> implies the C<:ratchet> or C<:r> modifier, which prevents the
 rule from backtracking.
 
 C<rule> implies both the C<:ratchet> and C<:sigspace> (short C<:s>)
-modifer, which means a rule doesn't backtrace, and it treats
+modifier, which means a rule doesn't backtrace, and it treats
 whitespace in the text of the regex as C«<.ws>» calls (ie
 matches whitespace, which is optional except between two word
 characters). Whitespace at the start of the regex and at the start
@@ -229,7 +229,7 @@ A C<Failure> is an "unthrown" or "soft" exception. It is an object that
 contains the exception, and throws the exception when the Failure is used
 as an ordinary object.
 
-A Failure returns False from a C<defined> check, and you can exctract
+A Failure returns False from a C<defined> check, and you can extract
 the exception with the C<exception> method.
 
 =head2 Why is C<wantarray> or C<want> gone? Can I return different things in different contexts?
@@ -337,10 +337,10 @@ features.
 =head2 Is there a CPAN for Perl 6? Or will Perl 6 use the Perl 5 CPAN?
 
 There isn't yet a module repository for Perl 6 as sophisticated as CPAN.
-But L<modules.perl6.org|http://modules.perl6.org/> has a ist of known
+But L<modules.perl6.org|http://modules.perl6.org/> has a list of known
 Perl 6 modules, and L<panda|https://github.com/tadzik/panda/> can install
 those that work with L<rakudo|http://rakudo.org/>.
 
-Suppport for installing Perl 6 modules from the Perl 5 CPAN is on its way.
+Support for installing Perl 6 modules from the Perl 5 CPAN is on its way.
 
 =end pod
