--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -968,7 +968,7 @@ L<http://doc.perl6.org/language/regexes#Continue>.
 =item print
 
 C<print> can be used as a function in Perl 6, defaulting to standard
-out. To use C<print> as a function with a filehndle I<instead> of
+out. To use C<print> as a function with a filehandle I<instead> of
 standard out, you need to put a colon after the filehandle. I. e.
 C<print $fh: "Howdy!">. The use of the colon as an "invocant marker"
 here is discussed at L<http://design.perl6.org/S03.html#line_4019>.
