--- a/Language/control.pod
+++ b/Language/control.pod
@@ -348,7 +348,7 @@ produces this output:
 C<gather/take> is scoped dynamically, so you can call C<take> from subs or methods that are called
 from within C<gather>:
 
-    sub weird(@elems, :$direction = 'foward') {
+    sub weird(@elems, :$direction = 'forward') {
         my %direction = (
             forward  => sub { take $_ for @elems },
             backward => sub { take $_ for @elems.reverse },
