--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -195,7 +195,7 @@ argument rule" and is important to understand when invoking slurpy functions:
     grab($(1,2));  # grab 1 2
     grab((1,2),3); # grab 1 2 grab 3
 
-This also makes user-requested flattenning feel consistent whether there is
+This also makes user-requested flattening feel consistent whether there is
 one sublist, or many:
 
     grab(flat (1,2),(3,4));   # grab 1 grab 2 grab 3 grab 4
@@ -416,7 +416,7 @@ For addition of real numbers, the distinction is somewhat moot, because C<+> is
 L<mathematically associative|https://en.wikipedia.org/wiki/Associative_property>.
 
 But for other operators it matters a great deal. For example for the
-exponentation/power operator, C<< infix:<**> >>:
+exponentiation/power operator, C<< infix:<**> >>:
 
     say 2 ** (2 ** 3);      # 256
     say (2 ** 2) ** 3;      # 64
