--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -135,7 +135,7 @@ Is the same as:
     }
     =end code
 
-For most purposes C<is export> is suffficient but the C<EXPORT>
+For most purposes C<is export> is sufficient but the C<EXPORT>
 packages are useful when you want to produce the exported symbols
 dynamically. For example:
 
