--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -71,7 +71,7 @@ likely grow with time).
     Pointer[void]  (void* in C, can point to all other types)
 
 Note that the lack of a C<returns> trait is used to indicate void return type.
-Do I<not> use the 'void' type anywhere except in the Pointer parametrization.
+Do I<not> use the 'void' type anywhere except in the Pointer parameterization.
 
 For strings, there is an additional "encoded" trait to give some extra hints on
 how to do the marshalling.
@@ -88,7 +88,7 @@ return will also be represented by the type object.
 
 For string arguments that are specified as C<const char *> it is necessary
 to tell Perl not to free the memory allocated to the C string after the
-function returns using C<explicity-manage> :
+function returns using C<explicitly-manage> :
 
     # C prototype is set_foo(const char * foo)
 	sub set_foo(Str) is native('libfoo') { * }
