--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -347,7 +347,7 @@ Increments its argument by one, and returns the incremented value.
     say $x;         # 4
 
 It works by calling the L<succ> method (for I<successor>) on its argument,
-which gives custom types the freedom to implement their own incrementation
+which gives custom types the freedom to implement their own increment
 semantics.
 
 =head2 prefix C«--»
@@ -361,7 +361,7 @@ Decrements its argument by one, and returns the decremented value.
     say $x;         # 2
 
 It works by calling the L<pred> method (for I<predecessor>) on its argument,
-which gives custom types the freedom to implement their own decrementation
+which gives custom types the freedom to implement their own decrement
 semantics.
 
 
