--- a/Language/quoting.pod
+++ b/Language/quoting.pod
@@ -82,7 +82,7 @@ possible to escape variables within a C<qq>-quoted string:
 =for code :allow<B>
 say B<">The B<\>$color variable contains the value '$color'B<">;
 
-    The $color variable contatins the value 'blue'
+    The $color variable contains the value 'blue'
 
 Another feature of C<qq> is the ability to interpolate Perl 6 code from
 within the string, using curly braces:
