--- a/Language/traps.pod
+++ b/Language/traps.pod
@@ -112,7 +112,7 @@ C<BUILDALL> mechanism instead:
 (Note that C<BUILDALL> is a method, not a submethod. That's because by
 default, there is only one such method per class hierarchy, whereas C<BUILD>
 is explicitly called per class. Which also explains why you need the
-C<nextsame> inside C<BUIDLALL>, but not inside C<BUILD>).
+C<nextsame> inside C<BUILDALL>, but not inside C<BUILD>).
 
 =head1 Regexes
 
