--- a/Type/List.pod
+++ b/Type/List.pod
@@ -34,7 +34,7 @@ such as C<append>:
 
     my @a = 1, 2, 3;
     my @nested = @a, @a;           # two elements
-    my @flat = flat @a, @a;        # six elements, with explict flat
+    my @flat = flat @a, @a;        # six elements, with explicit flat
     my @b = 'a', 'b';
     @b.append: @a;                 # @b now has 5 elements, because @a
                                    # is the sole argument to append
@@ -809,7 +809,7 @@ Usage:
 
 Zips two or more lists or other L<iterables|/type/Iterable> together by
 returning a sequence made of a list of all first elements of all lists, then a
-list of all second elemnts of a list etc.
+list of all second elements of a list etc.
 
     say .join for zip  <a b c>, <d e f>;
 
