--- a/Type/Metamodel/ClassHOW.pod
+++ b/Type/Metamodel/ClassHOW.pod
@@ -51,7 +51,7 @@ If C<$condition> returns a true value,
 C<$calculator> is called with the same arguments, and must return the code
 object to be invoked as the method, and is added to the method cache..
 
-If C<$conditon> returns a false value, the
+If C<$condition> returns a false value, the
 next fallback (if any) is tried, and if none matches, an exception
 L<of type X::Method::NotFound|/type/X::Method::NotFound> is thrown.
 
