--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -574,7 +574,7 @@ sequence that is not preceded by a dot, and increments it.
     '12.34'.succ      # 13.34
     'img001.png'.succ # img002.png
 
-The actual incrementation step works by mapping the last alphanumeric
+The actual increment step works by mapping the last alphanumeric
 character to a character range it belongs to, and choosing the next
 character in that range, carrying to the previous letter on overflow.
 
