--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -476,9 +476,9 @@ supplies are done.  Can also be called as a class method.
 
 Creates a supply that emits combined values as soon as there is a new value
 seen on B<any> of the supplies.  By default, C<Lists|/type/List> are
-created, but this can be changed by specifing your own combiner with the
+created, but this can be changed by specifying your own combiner with the
 :with parameter.  The optional :initial parameter can be used to indicate
-the inital state of the combined values.  By default, all supplies have to
+the initial state of the combined values.  By default, all supplies have to
 have at least one value emitted on them before the first combined values is
 emitted on the resulting supply.  The resulting supply is done as soon as
 B<any> of the given supplies are done.  Can also be called as a class method.
