--- a/Type/X/Attribute/Package.pod
+++ b/Type/X/Attribute/Package.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::Attribute::Package
 
-=SUBTITLE Compilation error due to declaring an attribute in an uneligible package
+=SUBTITLE Compilation error due to declaring an attribute in an ineligible package
 
     class X::Attribute::Package does X::Comp { }
 
