--- a/Type/X/Composition/NotComposable.pod
+++ b/Type/X/Composition/NotComposable.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::Composition::NotComposable
 
-=SUBTITLE Compilation error due to composing an uneligible type
+=SUBTITLE Compilation error due to composing an ineligible type
 
     class X::Composition::NotComposable is Exception { }
 
