--- a/Type/X/ControlFlow.pod
+++ b/Type/X/ControlFlow.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::ControlFlow
 
-=SUBTITLE Error due to calling a loop control command in an uneligible scope
+=SUBTITLE Error due to calling a loop control command in an ineligible scope
 
     class X::ControlFlow is Exception { }
 
