--- a/Type/X/Declaration/Scope.pod
+++ b/Type/X/Declaration/Scope.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::Declaration::Scope
 
-=SUBTITLE Compilation error due to a declaration with an uneligible scope
+=SUBTITLE Compilation error due to a declaration with an ineligible scope
 
     class X::Declaration::Scope does X::Comp { }
 
