--- a/Type/X/Declaration/Scope/Multi.pod
+++ b/Type/X/Declaration/Scope/Multi.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::Declaration::Scope::Multi
 
-=SUBTITLE Compilation error due to declaring a multi with an uneligible scope
+=SUBTITLE Compilation error due to declaring a multi with an ineligible scope
 
     class X::Declaration::Scope::Multi is X::Declaration::Scope { }
 
