--- a/Type/X/Inheritance/Unsupported.pod
+++ b/Type/X/Inheritance/Unsupported.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::Inheritance::Unsupported
 
-=SUBTITLE Compilation error due to inheriting from an uneligible type
+=SUBTITLE Compilation error due to inheriting from an ineligible type
 
     class X::Inheritance::Unsupported does X::Comp { }
 
