--- a/Type/X/Mixin/NotComposable.pod
+++ b/Type/X/Mixin/NotComposable.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::Mixin::NotComposable
 
-=SUBTITLE Error due to using an uneligible type as a mixin
+=SUBTITLE Error due to using an ineligible type as a mixin
 
     class X::Mixin::NotComposable is Exception { }
 
