--- a/Type/X/NoDispatcher.pod
+++ b/Type/X/NoDispatcher.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::NoDispatcher
 
-=SUBTITLE Error due to calling a dispatch command in an uneligible scope
+=SUBTITLE Error due to calling a dispatch command in an ineligible scope
 
     class X::NoDispatcher is Exception { }
 
