--- a/Type/X/Placeholder/Block.pod
+++ b/Type/X/Placeholder/Block.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::Placeholder::Block
 
-=SUBTITLE Compilation error due to a placeholder in an uneligible block
+=SUBTITLE Compilation error due to a placeholder in an ineligible block
 
     class X::Placeholder::Block does X::Comp
 
