--- a/Type/X/Role/Initialization.pod
+++ b/Type/X/Role/Initialization.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::Role::Initialization
 
-=SUBTITLE Error due to passing an initialization value to an uneligible role
+=SUBTITLE Error due to passing an initialization value to an ineligible role
 
     class X::Role::Initialization is Exception { }
 
