--- a/Type/X/Syntax/Self/WithoutObject.pod
+++ b/Type/X/Syntax/Self/WithoutObject.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::Syntax::Self::WithoutObject
 
-=SUBTITLE Compilation error due to invoking `self` in an uneligible scope
+=SUBTITLE Compilation error due to invoking `self` in an ineligible scope
 
     class X::Syntax::Self::WithoutObject does X::Syntax { }
 
