--- a/Type/Iterator.pod
+++ b/Type/Iterator.pod
@@ -19,7 +19,7 @@ The main API is the C<pull-one> method, which either returns the next value,
 or the sentinel value C<IterationEnd> if no more elements are available. Each
 class implementing C<Iterator> must provide a C<pull-one> method. All other
 Iterator API methods can be implemented in terms of C<pull-one>, but also
-overriden for performance reasons.
+overridden for performance reasons.
 
 Note: The only valid use of the sentinel value C<IterationEnd> in a program
 is identity comparison (using C<=:=>) with the result of a method in the
@@ -40,8 +40,8 @@ Usage:
 This method stub ensures that classes implementing the C<Iterator> role
 provide a method named C<pull-one>.
 
-The C<pull-one> method is supposed to return the next value if avaiable, or
-the sentenial value C<IterationEnd> if no more elements are available.
+The C<pull-one> method is supposed to return the next value if available, or
+the sentinel value C<IterationEnd> if no more elements are available.
 
 =head2 method push-exactly
 
@@ -57,7 +57,7 @@ Produces C<$count> elements, and for each of them, calls
 C<$target.push($value)>.
 
 If fewer than C<$count> elements are available from the iterator, it
-returns the sentenial value C<IterationEnd>. Otherwise it returns
+returns the sentinel value C<IterationEnd>. Otherwise it returns
 C<$count>.
 
 =head2 method push-at-least
@@ -74,7 +74,7 @@ Produces at least C<$count> elements, and for each of them, calls
 C<$target.push($value)>.
 
 If fewer than C<$count> elements are available from the iterator, it
-returns the sentenial value C<IterationEnd>. Otherwise it returns
+returns the sentinel value C<IterationEnd>. Otherwise it returns
 C<$count>.
 
 Iterators with side effects should produce exactly C<$count> elements;
@@ -125,7 +125,7 @@ Usage:
 Returns C<True> for iterators that consider themselves lazy, and C<False>
 otherwise.
 
-Built-in operations that know that they can produce inifinitely many values
+Built-in operations that know that they can produce infinitely many values
 return C<True> here, for example C<(1..6).roll(*)>.
 
 =head2 method count-only
@@ -153,6 +153,6 @@ Usage:
     ITERATOR.sink-all
 
 Exhausts the iterator (while discarding generated elements) purely for the
-side effects of the iteraton.
+side effects of the iteration.
 
 =end pod
