--- a/Type/X/Method/InvalidQualifier.pod
+++ b/Type/X/Method/InvalidQualifier.pod
@@ -2,7 +2,7 @@
 
 =TITLE class X::Method::InvalidQualifier
 
-=SUBTITLE Error due to calling a qualified method from an uneligible class
+=SUBTITLE Error due to calling a qualified method from an ineligible class
 
     class X::Method::InvalidQualifier is Exception { }
 
