Fix P5ism '->' in language/testing

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -302,8 +302,8 @@ class GreatUncleBulgaria is Womble {
 subtest {
     my $womble = GreatUncleBulgaria.new;
     isa-ok($womble, Womble, "Great Uncle Bulgaria is a womble");
-    is($womble->location, "Wimbledon Common", "Correct location");
-    ok($womble->spectacles, "Wears spectacles");
+    is($womble.location, "Wimbledon Common", "Correct location");
+    ok($womble.spectacles, "Wears spectacles");
 }, "Check Great Uncle Bulgaria";
 =end code
 
