[FAQ] explain Any is sort of like undef

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -6,6 +6,19 @@
 
 =head1 Language Features
 
+=head2 What is C<(Any)>?
+
+L<Any|type/Any> is a top level class used as a default superclass for new
+classes which is often seen in a context where a variable has been defined but
+not assigned where it loosely resembles the undef or null values in other
+languages.
+
+Example:
+
+    my $foo
+    say $foo # (Any)
+    say $foo.^name # Any
+
 =head2 What is C<so>?
 
 C<so> is a loose precedence operator that coerces to L<Bool|/type/Bool>.
