--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -9,7 +9,7 @@
 =head2 What is C<(Any)>?
 
 L<Any|type/Any> is a top level class used as a default superclass for new
-classes which is often seen in a context where a variable has been defined but
+classes. It is often seen in a context where a variable has been defined but
 not assigned where it loosely resembles the undef or null values in other
 languages.
 
