[FAQ] new modules section to contain more content

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -270,6 +270,17 @@ For example regex matches return L<Match objects that know how to respond
 to list indexing, hash indexing, and that can turn into the matched
 string|/type/Match>.
 
+=head1 Modules 
+
+=head2 Is there a CPAN for Perl 6? Or will Perl 6 use the Perl 5 CPAN?
+
+There isn't yet a module repository for Perl 6 as sophisticated as CPAN.
+But L<modules.perl6.org|http://modules.perl6.org/> has a list of known
+Perl 6 modules, and L<panda|https://github.com/tadzik/panda/> can install
+those that work with L<rakudo|http://rakudo.org/>.
+
+Support for installing Perl 6 modules from the Perl 5 CPAN is on its way.
+
 =head1 Meta Questions and Advocacy
 
 =head2 When will Perl 6 be ready? Is it ready now?
@@ -346,14 +357,5 @@ It also offers
 Please see the L<feature comparison
 matrix|http://perl6.org/compilers/features> for an overview of implemented
 features.
-
-=head2 Is there a CPAN for Perl 6? Or will Perl 6 use the Perl 5 CPAN?
-
-There isn't yet a module repository for Perl 6 as sophisticated as CPAN.
-But L<modules.perl6.org|http://modules.perl6.org/> has a list of known
-Perl 6 modules, and L<panda|https://github.com/tadzik/panda/> can install
-those that work with L<rakudo|http://rakudo.org/>.
-
-Support for installing Perl 6 modules from the Perl 5 CPAN is on its way.
 
 =end pod
