[FAQ] more Any feedback from IRC++

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -11,13 +11,20 @@
 L<Any|type/Any> is a top level class used as a default superclass for new
 classes. It is often seen in a context where a variable has been defined but
 not assigned where it loosely resembles the undef or null values in other
-languages.
+languages. 
 
 Example:
 
     my $foo
-    say $foo # (Any)
+    say $foo # (Any) note the parens indicate type object
     say $foo.^name # Any
+
+(Any) shouldn't be used to check for definedness.  In Perl 6, definedness is a
+property of an object. Usually instances are defined and type objects are
+undefined.
+
+    say 1.defined # True
+    say (Any).defined # False
 
 =head2 What is C<so>?
 
