[FAQ] explain more about modules

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -279,14 +279,23 @@ string|/type/Match>.
 
 =head1 Modules 
 
-=head2 Is there a CPAN for Perl 6? Or will Perl 6 use the Perl 5 CPAN?
+=head2 Is there a CPAN for Perl 6?
 
-There isn't yet a module repository for Perl 6 as sophisticated as CPAN.
-But L<modules.perl6.org|http://modules.perl6.org/> has a list of known
-Perl 6 modules, and L<panda|https://github.com/tadzik/panda/> can install
-those that work with L<rakudo|http://rakudo.org/>.
+There isn't yet a module repository for Perl 6 as sophisticated as CPAN.  But
+L<modules.perl6.org|http://modules.perl6.org/> has a list of known Perl 6
+modules called the "ecosystem" hosted on github, and
+L<panda|https://github.com/tadzik/panda/> can install those that work with
+L<rakudo|http://rakudo.org/>.
 
 Support for installing Perl 6 modules from the Perl 5 CPAN is on its way.
+
+=head2 Does Rakudo have a core standard library?
+
+Rakudo is a compiler release with minimal batteries included rather like the
+linux kernel itself.
+
+Rakudo Star is a distribution of rakudo which ships with some useful modules
+and many more can be installed from the ecosystem.
 
 =head1 Meta Questions and Advocacy
 
