[FAQ] return constraint

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -67,6 +67,19 @@ Likewise C<:U> constrains to undefined values, that is, type objects.
 
 To explicitly allow either type objects or instances, you can use C<:_>.
 
+=head2 What is the --> thing in the signature?
+
+--> is a return constraint checked at compile time.
+
+Example:
+
+    sub foo ( Int $a, Int $b --> Int ) {
+            return $a + $b;
+    }
+
+    foo(2,3.1) 
+    # Calling foo(Int, Rat) will never work with declared signature (Int $a, Int $b --> Int)
+
 =head2 How can I extract the values from a Junction?
 
 If you want to extract the values (eigenstates) from a
@@ -254,7 +267,7 @@ the exception with the C<exception> method.
 
 =head2 Why is C<wantarray> or C<want> gone? Can I return different things in different contexts?
 
-Perl has the C<wantarray> function that tells you whether it is called in
+Perl 5 has the C<wantarray> function that tells you whether it is called in
 void, scalar or list context. Perl 6 has no equivalent construct,
 because context does not flow inwards, i.e. a routine cannot know which
 context it is called in.
