compile time errors are SORRY

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -6,6 +6,17 @@
 
 =head1 Language Features
 
+=head2 Why is the Rakudo compiler sometimes more apologetic?
+
+If SORRY! is present in the output the error is a compile time error 
+otherwise it's runtime.
+
+Example:
+    say 1/0 # Attempt to divide 1 by zero using div
+
+    sub foo ( Int $a, Int $b ) {...}
+    foo(1) # ===SORRY!=== Error while compiling ...
+
 =head2 What is C<(Any)>?
 
 L<Any|type/Any> is a top level class used as a default superclass for new
